# sp1-ethereum-storage-proofs

./: .gitignore  README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs  trie.rs  utils.rs
