[workspace]
[package]
version = "0.1.0"
name = "ethereum-storage-proofs"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
hex = { version = "0.4.3", features = [] }
serde_json = "1.0.105"
sha3 = "0.10.2"
rlp = "0.5.2"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
